; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/zstd/lib/legacy/extr_zstd_v07.c_ZSTDv07_decompress_insertDictionary.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/zstd/lib/legacy/extr_zstd_v07.c_ZSTDv07_decompress_insertDictionary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8* }

@ZSTDv07_DICT_MAGIC = common dso_local global i64 0, align 8
@dictionary_corrupted = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_5__*, i8*, i64)* @ZSTDv07_decompress_insertDictionary to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ZSTDv07_decompress_insertDictionary(%struct.TYPE_5__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load i64, i64* %7, align 8
  %11 = icmp ult i64 %10, 8
  br i1 %11, label %12, label %17

12:                                               ; preds = %3
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i64, i64* %7, align 8
  %16 = call i64 @ZSTDv07_refDictContent(%struct.TYPE_5__* %13, i8* %14, i64 %15)
  store i64 %16, i64* %4, align 8
  br label %60

17:                                               ; preds = %3
  %18 = load i8*, i8** %6, align 8
  %19 = call i8* @MEM_readLE32(i8* %18)
  %20 = ptrtoint i8* %19 to i64
  store i64 %20, i64* %8, align 8
  %21 = load i64, i64* %8, align 8
  %22 = load i64, i64* @ZSTDv07_DICT_MAGIC, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %29

24:                                               ; preds = %17
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = load i64, i64* %7, align 8
  %28 = call i64 @ZSTDv07_refDictContent(%struct.TYPE_5__* %25, i8* %26, i64 %27)
  store i64 %28, i64* %4, align 8
  br label %60

29:                                               ; preds = %17
  %30 = load i8*, i8** %6, align 8
  %31 = getelementptr inbounds i8, i8* %30, i64 4
  %32 = call i8* @MEM_readLE32(i8* %31)
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 0
  store i8* %32, i8** %34, align 8
  %35 = load i8*, i8** %6, align 8
  %36 = getelementptr inbounds i8, i8* %35, i64 8
  store i8* %36, i8** %6, align 8
  %37 = load i64, i64* %7, align 8
  %38 = sub i64 %37, 8
  store i64 %38, i64* %7, align 8
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %40 = load i8*, i8** %6, align 8
  %41 = load i64, i64* %7, align 8
  %42 = call i64 @ZSTDv07_loadEntropy(%struct.TYPE_5__* %39, i8* %40, i64 %41)
  store i64 %42, i64* %9, align 8
  %43 = load i64, i64* %9, align 8
  %44 = call i64 @ZSTDv07_isError(i64 %43)
  %45 = icmp ne i64 %44, 0
  br i1 %45, label %46, label %49

46:                                               ; preds = %29
  %47 = load i32, i32* @dictionary_corrupted, align 4
  %48 = call i64 @ERROR(i32 %47)
  store i64 %48, i64* %4, align 8
  br label %60

49:                                               ; preds = %29
  %50 = load i8*, i8** %6, align 8
  %51 = load i64, i64* %9, align 8
  %52 = getelementptr inbounds i8, i8* %50, i64 %51
  store i8* %52, i8** %6, align 8
  %53 = load i64, i64* %9, align 8
  %54 = load i64, i64* %7, align 8
  %55 = sub i64 %54, %53
  store i64 %55, i64* %7, align 8
  %56 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %57 = load i8*, i8** %6, align 8
  %58 = load i64, i64* %7, align 8
  %59 = call i64 @ZSTDv07_refDictContent(%struct.TYPE_5__* %56, i8* %57, i64 %58)
  store i64 %59, i64* %4, align 8
  br label %60

60:                                               ; preds = %49, %46, %24, %12
  %61 = load i64, i64* %4, align 8
  ret i64 %61
}

declare dso_local i64 @ZSTDv07_refDictContent(%struct.TYPE_5__*, i8*, i64) #1

declare dso_local i8* @MEM_readLE32(i8*) #1

declare dso_local i64 @ZSTDv07_loadEntropy(%struct.TYPE_5__*, i8*, i64) #1

declare dso_local i64 @ZSTDv07_isError(i64) #1

declare dso_local i64 @ERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
